Improve spell handling